# FBI_Fraud

./: .env  .gitignore  2019data.json  2020data.json  2021data.json  Home.py  PROJECT_SUMMARY.md  README.md  READMEPROBLEM.md  TESTING.md  __init__.py  analyze_ocr.py  analyze_server.py  client_pipeline.py  deepseekOcr.py  deploy_modal.py  extract_state_from_html.py  fraud_visualizations.py  full60andupdata.json  gemini_supabase.py  main.py  ocr_api.py  ocr_endpoint.py  ocr_results.json  public_modal.py  pyproject.toml  requirements.txt  sample_ocr_data.json  streamlit_app.py  test_api.py  test_gemini_supabase.py  verify_supabase.py
pages/: Demo.py  Demonstration.py  Findings.py
