[project]
name = "fbi-fraud"
version = "0.1.0"
description = "A final project for DTSC 3602 looking at fraud detection from the FBI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Modal deployment dependencies
    "modal>=0.64.0",
    
    # DeepSeek-OCR core dependencies
    "transformers>=4.44.2,<4.46",
    "torch>=2.3.0",
    "safetensors>=0.4.0",
    "accelerate>=0.20.0",
    "Pillow>=10.0.0",
    
    # FastAPI web framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    
    # PDF processing
    "pdf2image>=1.16.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

# Data analysis (for notebooks/local dev, not for Modal deployment)
analysis = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "google-generativeai>=0.8.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fbi_fraud"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
