[project]
name = "fbi-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "google-generativeai",
    "supabase",
    "python-dotenv",
    "pandas",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "image>=1.5.33",
    "modal>=1.2.4",
]
